--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "jest --testPathIgnorePatterns=integration",
+    "test:integration": "jest --testPathPattern=integration --testTimeout=120000",
+    "test:all": "jest --testTimeout=120000",
+    "test:watch": "jest --watch --testPathIgnorePatterns=integration",
     "lint": "eslint src/**/*.ts"
   },
   "keywords": [
