--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "gptinvoice": "./dist/index.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "npm run lint && npm run format:check && tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "test": "jest --testPathIgnorePatterns=integration",
     "test:integration": "jest --testPathPattern=integration --testTimeout=120000",
     "test:all": "jest --testTimeout=120000",
     "test:watch": "jest --watch --testPathIgnorePatterns=integration",
-    "lint": "eslint src/**/*.ts"
+    "lint": "eslint src tests",
+    "lint:fix": "eslint src tests --fix",
+    "format": "prettier --write 'src/**/*.ts' 'tests/**/*.ts'",
+    "format:check": "prettier --check 'src/**/*.ts' 'tests/**/*.ts'"
   },
   "keywords": [
     "chatgpt",
@@ -28,9 +31,15 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.0",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
+    "@typescript-eslint/parser": "^8.49.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
     "jest": "^29.7.0",
+    "prettier": "^3.7.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
