--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "puppeteer": "^24.2.0"
+    "puppeteer": "^24.2.0",
+    "smol-toml": "^1.6.0"
   }
 }
